tests/machine/x/ocaml/load_yaml.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/load_yaml.ml", line 59, characters 0-16:
59 | List.rev !__res0)
     ^^^^^^^^^^^^^^^^
Error: This expression has type record1 list
       but an expression was expected of type (string * Obj.t) list list
       Type record1 is not compatible with type (string * Obj.t) list 


Context (around line 59):
  57 |     __res0 := { name = p.name; email = p.email } :: !__res0;
  58 |   ) people;
  59 | List.rev !__res0)
  60 | 
  61 | 
